--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "node app/server/index.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -13,9 +13,16 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "apisauce": "^3.0.1",
+    "axios": "^1.6.8",
+    "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.19.2",
     "formik": "^2.4.5",
+    "helmet": "^7.1.0",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
