--- a/package.json
+++ b/package.json
@@ -9,27 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@clerk/clerk-expo": "^0.19.4",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "apisauce": "^3.0.1",
     "axios": "^1.6.8",
     "compression": "^1.7.4",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.0",
+    "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
     "formik": "^2.4.5",
     "helmet": "^7.1.0",
     "node-fetch": "^3.3.2",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "pg": "^8.11.5",
+    "react": "^18.2.0",
+    "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "nodemon": "^3.1.0"
   },
   "private": true
