--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native-stack": "^6.9.17",
     "apisauce": "^3.0.1",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
@@ -28,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
+    "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
