--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.37.1",
     "apisauce": "^3.0.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
