--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "expo": "^51.0.0",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
