--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.18.0",
     "formik": "^2.4.5",
     "helmet": "^7.1.0",
+    "lottie-react-native": "6.7.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
