--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-windows": "^0.74.8",
     "sequelize": "^6.37.3",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
